# StructAgent-LLM-structural-design-analysis

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  analysis_history.db  environment.yml  pyproject.toml  run_test.py  test.ps1  test_server.ps1  update_html_fixes.py  update_interaction_fixes.py  update_render_fixes.py  update_scene_fixes.py  update_ui_fixes.py
app/: agents.py  config.py  logging_config.py  main.py  models.py
app/routes/: analyze.py  history.py  pages.py  projects.py  sections.py
app/static/: index.html  styles.css
app/static/js/: analysis.js  api.js  chat.js  dom.js  main.js  modals.js  projects.js  results.js  shortcuts.js  state.js  tabs.js
app/static/js/canvas3d/: index.js  interaction.js  render.js  scene.js  ui.js
app/tools/: beam.py  load_combinations.py  opensees_3d.py  report.py
docs/: API.md  ARCHITECTURE.md  BACKEND.md  FRONTEND.md  SETUP.md  TOOLS.md
github/workflows/: ci.yml
graphify-out/: .graphify_chunk_1_files.txt  .graphify_chunk_2_files.txt  .graphify_chunk_3_files.txt  .graphify_python  GRAPH_REPORT.md  generate_html.py  graph.html  graph.json  save_cache.py  step9_cost.py
tests/: test_all_tools.py  test_beam_tool.py  test_flask_app.py  test_opensees_3d.py
